Fixed the overlay issue... it was likely due to z-indexgit add --all! Will take a look next time....

--- a/assets/css/project-style.css
+++ b/assets/css/project-style.css
@@ -9,7 +9,6 @@
     width: 100%;
     height: 100%; /* Adjust height as needed */
     overflow: hidden;
-
     background-color: grey;
   }
 
@@ -17,7 +16,7 @@
   /* Each individual image's container */
   .slide-container {
     position: absolute;
-
+    overflow: hidden; /* Add this line */
     width: 75%;
     height: 75%;
 
@@ -27,12 +26,62 @@
 
     opacity: 0;
     transition: opacity 1s ease;
+
+    z-index: 1; /* Add this line */
   }
   
 
-  .slide-container.active {
+.slide-container.active {
+  opacity: 1;
+  z-index: 2; /* Add this line */
+}
+
+
+.slide-container:hover {
+  opacity: 0.2;
+}
+
+.slide-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.slide-container:hover .overlay {
   opacity: 1;
 }
+
+.slide-container .overlay p {
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+}
+
+
+
+.slide-container:hover:not(.active) {
+  opacity: 0.2;
+  z-index: 1; /* Add this line */
+}
+
+.slide-container:hover:not(.active) .overlay {
+  opacity: 1;
+}
+
+
+
+
+
+
+
 
 
 
@@ -41,7 +90,6 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-
     max-width: 100%;
     max-height: 100%;
 }
